fix contrast errors

--- a/css/style.css
+++ b/css/style.css
@@ -37,5 +37,18 @@ h1{
 }
 
 p{
-  line-height: 1.3;
+  line-height: 1.5;
+  color: #F0F4F8;
+}
+
+p>a{
+  color: #00D2FF;
+}
+
+footer>p{
+  color: #1A202C;
+}
+
+footer>p>a{
+  color: #0022AA;
 }
